--- a/i18n/locales/source/dashboard/course_offerings.json
+++ b/i18n/locales/source/dashboard/course_offerings.json
@@ -5,6 +5,7 @@
   "2021-cs-principles-deeper-learning": "2021-cs-principles-deeper-learning",
   "2021drafting": "Planning script for CI and CSF 2021",
   "2021drafting-1": "2021drafting-1",
+  "3-5gamedesign": "3-5gamedesign",
   "ai-classroom-test": "ai-classroom-test",
   "ai-ethics": "Our AI Code of Ethics",
   "ai-lab": "ai-lab",
@@ -53,6 +54,7 @@
   "coding-with-ai": "Coding with AI",
   "colehoc17": "colehoc17",
   "colehoc2017": "colehoc2017",
+  "computer-vision": "computer-vision",
   "computer-vision-pilot": "computer-vision-pilot",
   "contagion-guided-practice": "Contagion Guided Practice [Teacher only]",
   "contagion-guided-practice-1": "contagion-guided-practice-1",
@@ -282,6 +284,7 @@
   "edit-code": "Edit Code",
   "edit-code-1": "edit-code-1",
   "elem-game-design": "elem-game-design",
+  "elementaryai": "elementaryai",
   "emma": "emma",
   "emmas-playground": "emmas-playground",
   "equity-support": "equity-support",
@@ -317,10 +320,11 @@
   "gamelabprojects": "gamelabprojects",
   "gen-ai-customizing-draft": "gen-ai-customizing-draft",
   "gen-ai-customizing-pilot-v1": "[Pilot] Customizing Language Models",
-  "gen-ai-customizing-pilot-v2": "[Pilot] Customizing Language Models",
+  "gen-ai-customizing-pilot-v2": "[Create and Learn] Customizing Language Models",
   "gen-ai-foudations-pilot-v1": "[Pilot] Foundations of Generative AI",
   "gen-ai-foundations-draft": "gen-ai-foundations-draft",
   "gen-ai-humanities": "gen-ai-humanities",
+  "gen-ai-standalone": "gen-ai-standalone",
   "genai-temp": "genai-temp",
   "gettingstarted-k5": "gettingstarted-k5",
   "glj-behavior-test": "glj-behavior-test",
@@ -376,6 +380,7 @@
   "melissasandbox": "melissasandbox",
   "microbit": "Creating Apps with Devices (micro:bit)",
   "microbit-temp": "microbit-temp",
+  "microbitmakermodule": "microbitmakermodule",
   "mike-test": "mike-test",
   "minecraft": "Minecraft Designer",
   "ml-playground": "ml-playground",
@@ -454,6 +459,9 @@
   "self-paced-foundations-cs": "self-paced-foundations-cs",
   "self-paced-pl-ai-101": "self-paced-pl-ai-101",
   "self-paced-pl-aiml": "Teaching AI and Machine Learning",
+  "self-paced-pl-coding-with-ai": "self-paced-pl-coding-with-ai",
+  "self-paced-pl-computer-vision": "self-paced-pl-computer-vision",
+  "self-paced-pl-computer-vision-2024": "self-paced-pl-computer-vision-2024",
   "self-paced-pl-csa": "CSA Getting Started Modules",
   "self-paced-pl-csc": "Teaching CS Connections",
   "self-paced-pl-csd": "Teaching CS Discoveries",
