--- a/i18n/locales/source/course_content/Hour of Code/outbreak.json
+++ b/i18n/locales/source/course_content/Hour of Code/outbreak.json
@@ -17,6 +17,10 @@
     "behavior_names": {
       "recovering": "recovering",
       "wandering": "wandering"
+    },
+    "behavior_descriptions": {
+      "gradually recover from sickness": "gradually recover from sickness",
+      "move a sprite, changing its direction randomly": "move a sprite, changing its direction randomly"
     }
   },
   "https://studio.code.org/s/outbreak/lessons/1/levels/3": {
@@ -33,6 +37,10 @@
     "behavior_names": {
       "recovering": "recovering",
       "wandering": "wandering"
+    },
+    "behavior_descriptions": {
+      "gradually recover from sickness": "gradually recover from sickness",
+      "move a sprite, changing its direction randomly": "move a sprite, changing its direction randomly"
     }
   },
   "https://studio.code.org/s/outbreak/lessons/1/levels/4": {
@@ -46,13 +54,17 @@
     "behavior_names": {
       "recovering": "recovering",
       "wandering": "wandering"
+    },
+    "behavior_descriptions": {
+      "gradually recover from sickness": "gradually recover from sickness",
+      "move a sprite, changing its direction randomly": "move a sprite, changing its direction randomly"
     }
   },
   "https://studio.code.org/s/outbreak/lessons/1/levels/5": {
     "display_name": "Modify Your Simulation",
     "bubble_choice_description": "Change how the simulation works and make a prediction about what will happen.",
     "short_instructions": "Change the number and size of monster sprites for your simulation.",
-    "long_instructions": "<img src=\"https://images.code.org/d228e4b5feb602025d5f7b5145dbece9-image-1603143852671.gif\" width=\"250\" class=\"instructor-image-end\">\n\n# More monsters\n\n_New monsters are moving into Monster Town! What will this mean for the outbreak? Let's use the simulation to make predictions._ \n\n## Do This\n\n1.  Change the number of monster sprites you make by editing this block: \n    <p><xml><block type=\"gamelab_makeNumSprites\"><title name=\"ANIMATION_NAME\">\"healthy\"</title><value name=\"NUM\"><block type=\"math_number\"><title name=\"NUM\">???</title></block></value></block></xml></p>\n\n2.  Change the size of the sprites by editing this block: \n    <p><xml><block type=\"gamelab_setProp\"><title name=\"PROPERTY\">\"scale\"</title><value name=\"SPRITE\"><block type=\"gamelab_getAllSprites\"></block></value><value name=\"VAL\"><block type=\"math_number\"><title name=\"NUM\">???</title></block></value></block></xml></p>\n\n3.  Run the new simulation 3-5 times.\n\n_Did anything happen differently?_",
+    "long_instructions": "<img src=\"https://images.code.org/d228e4b5feb602025d5f7b5145dbece9-image-1603143852671.gif\" width=\"250\" class=\"instructor-image-end\">\n\n# More monsters\n\n_New monsters are moving into Monster Town! What will this mean for the outbreak? Let's use the simulation to make predictions._ \n\n## Do This\n\n1.  Change the number of monster sprites you make by editing this block:\n    [blockly block][0]\n\n2.  Change the size of the sprites by editing this block:\n    [blockly block][1]\n\n3.  Run the new simulation 3-5 times.\n\n_Did anything happen differently?_",
     "authored_hints": {
       "challenge": "## Looking for an extra challenge?\n\nYou can also make the monsters move faster or slower.\n\n1.  Click `Edit` in this block [blockly block][0] \n2.  Increase or decrease the number in this block: \n\n[blockly block][1]\n\nTo make the monsters move slower, choose a decimal number like `0.5` or `0.25`. To make them move faster, choose any number greater than 1."
     },
@@ -71,6 +83,20 @@
       "moving west": "moving west",
       "patrolling": "patrolling",
       "moving with arrow keys": "moving with arrow keys"
+    },
+    "behavior_descriptions": {
+      "gradually recover from sickness": "gradually recover from sickness",
+      "move a sprite, changing its direction randomly": "move a sprite, changing its direction randomly",
+      "move a sprite to the right across the screen": "move a sprite to the right across the screen",
+      "rotate a sprite to its left": "rotate a sprite to its left",
+      "rotate a sprite to its right": "rotate a sprite to its right",
+      "change the size of a sprite": "change the size of a sprite",
+      "move a sprite downwards across the screen": "move a sprite downwards across the screen",
+      "move a sprite horizontally, reversing direction if it touches the edges of the screen": "move a sprite horizontally, reversing direction if it touches the edges of the screen",
+      "move a sprite upwards across the screen": "move a sprite upwards across the screen",
+      "randomly change the size of a sprite": "randomly change the size of a sprite",
+      "move a sprite to the left across the screen": "move a sprite to the left across the screen",
+      "move a sprite across the screen, reversing direction if it touches the edges": "move a sprite across the screen, reversing direction if it touches the edges"
     }
   },
   "https://studio.code.org/s/outbreak/lessons/1/levels/6": {
@@ -81,6 +107,10 @@
     "behavior_names": {
       "recovering": "recovering",
       "wandering": "wandering"
+    },
+    "behavior_descriptions": {
+      "gradually recover from sickness": "gradually recover from sickness",
+      "move a sprite, changing its direction randomly": "move a sprite, changing its direction randomly"
     }
   },
   "https://studio.code.org/s/outbreak/lessons/1/levels/7": {
@@ -95,6 +125,10 @@
     "behavior_names": {
       "recovering": "recovering",
       "wandering": "wandering"
+    },
+    "behavior_descriptions": {
+      "gradually recover from sickness": "gradually recover from sickness",
+      "move a sprite, changing its direction randomly": "move a sprite, changing its direction randomly"
     }
   },
   "https://studio.code.org/s/outbreak/lessons/1/levels/8": {
@@ -124,6 +158,20 @@
       "moving west": "moving west",
       "patrolling": "patrolling",
       "moving with arrow keys": "moving with arrow keys"
+    },
+    "behavior_descriptions": {
+      "gradually recover from sickness": "gradually recover from sickness",
+      "move a sprite, changing its direction randomly": "move a sprite, changing its direction randomly",
+      "move a sprite to the right across the screen": "move a sprite to the right across the screen",
+      "rotate a sprite to its left": "rotate a sprite to its left",
+      "rotate a sprite to its right": "rotate a sprite to its right",
+      "change the size of a sprite": "change the size of a sprite",
+      "move a sprite downwards across the screen": "move a sprite downwards across the screen",
+      "move a sprite horizontally, reversing direction if it touches the edges of the screen": "move a sprite horizontally, reversing direction if it touches the edges of the screen",
+      "move a sprite upwards across the screen": "move a sprite upwards across the screen",
+      "randomly change the size of a sprite": "randomly change the size of a sprite",
+      "move a sprite to the left across the screen": "move a sprite to the left across the screen",
+      "move a sprite across the screen, reversing direction if it touches the edges": "move a sprite across the screen, reversing direction if it touches the edges"
     }
   },
   "https://studio.code.org/s/outbreak/lessons/1/levels/9": {
@@ -150,6 +198,20 @@
       "moving west": "moving west",
       "patrolling": "patrolling",
       "moving with arrow keys": "moving with arrow keys"
+    },
+    "behavior_descriptions": {
+      "gradually recover from sickness": "gradually recover from sickness",
+      "move a sprite, changing its direction randomly": "move a sprite, changing its direction randomly",
+      "move a sprite to the right across the screen": "move a sprite to the right across the screen",
+      "rotate a sprite to its left": "rotate a sprite to its left",
+      "rotate a sprite to its right": "rotate a sprite to its right",
+      "change the size of a sprite": "change the size of a sprite",
+      "move a sprite downwards across the screen": "move a sprite downwards across the screen",
+      "move a sprite horizontally, reversing direction if it touches the edges of the screen": "move a sprite horizontally, reversing direction if it touches the edges of the screen",
+      "move a sprite upwards across the screen": "move a sprite upwards across the screen",
+      "randomly change the size of a sprite": "randomly change the size of a sprite",
+      "move a sprite to the left across the screen": "move a sprite to the left across the screen",
+      "move a sprite across the screen, reversing direction if it touches the edges": "move a sprite across the screen, reversing direction if it touches the edges"
     }
   },
   "https://studio.code.org/s/outbreak/lessons/1/levels/10": {
@@ -172,6 +234,20 @@
       "moving west": "moving west",
       "patrolling": "patrolling",
       "moving with arrow keys": "moving with arrow keys"
+    },
+    "behavior_descriptions": {
+      "gradually recover from sickness": "gradually recover from sickness",
+      "move a sprite, changing its direction randomly": "move a sprite, changing its direction randomly",
+      "move a sprite to the right across the screen": "move a sprite to the right across the screen",
+      "rotate a sprite to its left": "rotate a sprite to its left",
+      "rotate a sprite to its right": "rotate a sprite to its right",
+      "change the size of a sprite": "change the size of a sprite",
+      "move a sprite downwards across the screen": "move a sprite downwards across the screen",
+      "move a sprite horizontally, reversing direction if it touches the edges of the screen": "move a sprite horizontally, reversing direction if it touches the edges of the screen",
+      "move a sprite upwards across the screen": "move a sprite upwards across the screen",
+      "randomly change the size of a sprite": "randomly change the size of a sprite",
+      "move a sprite to the left across the screen": "move a sprite to the left across the screen",
+      "move a sprite across the screen, reversing direction if it touches the edges": "move a sprite across the screen, reversing direction if it touches the edges"
     }
   }
 }
