--- a/i18n/locales/source/blockly-mooc/common.json
+++ b/i18n/locales/source/blockly-mooc/common.json
@@ -129,6 +129,7 @@
   "aiTrainedModelsDeleteModelMessage": "This model will be permanently deleted, and you will not be able to use this model in any App Lab projects.",
   "aiTrainedModelsDeleteModelFailed": "Model with id {id} could not be deleted.",
   "aiTutor": "AI Tutor",
+  "aiUserMessagePlaceholder": "Add a chat message...",
   "aiWarningModalHeader": "Remember to chat responsibly!",
   "aiWarningModalInappropriateFlagged": "Inappropriate messages will be flagged and your teacher will be notified.",
   "aiWarningModalMessagesAreRecorded": "All messages you send are recorded.",
@@ -415,12 +416,15 @@
   "childAccountConsentValidPermission": "Permission:",
   "childAccountConsentValidPermissionGranted": "Granted on {date}",
   "childAccountConsentValidMessage": "Thank you for approving your child’s Code.org account! You will receive a confirmation email within 24–48 hours. Please let your child know you’ve approved their account so they can get started learning and coding today!",
+  "childAccountPolicy_ageGatedStudentsWarning": "Some students in this section are under 13 and will require parental consent to continue using their personal accounts after 7/1/2024.",
   "childAccountPolicy_consentStatus": "Consent Status",
   "childAccountPolicy_consentProcessReadMore": "Read more about this consent process and these changes here.",
   "childAccountPolicy_lockedOut": "Locked Out",
   "childAccountPolicy_studentParentalConsentStatus": "Student Parental Consent Status",
   "childAccountPolicy_studentParentalConsentNotice": "The following students will require parental consent by 7/1/2024 to continue using Code.org with their personal account. Please ensure these students provide a parent or guardian email address to complete the parental consent process.",
   "childAccountPolicy_notStarted": "Not Started",
+  "childAccountPolicy_parentEmailed": "Parent/Guardian Emailed?",
+  "childAccountPolicy_pendingLockout": "Pending Lockout",
   "childAccountPolicy_permissionGranted": "Permission Granted",
   "childAccountPolicy_requestSent": "Request Sent",
   "childAccountPolicy_CreateSectionsWarning": "If you have students under 13, they may require parental consent to use a personal login. Please go back and use picture password, secret word, or school-managed sections to avoid any interruptions for students under 13.",
@@ -471,6 +475,7 @@
   "codeReviewToggleDisableError": "Error disabling code review. Please try again.",
   "codeToEmbed": "Code that will be embedded.",
   "codeTooltip": "See generated JavaScript code.",
+  "collapseAll": "Collapse all student rows",
   "commentPrefix": "comment:",
   "commentTooltip": "Leave a message for yourself, or anyone else reading your code.",
   "committedVersionLabel": "Commit from {timestamp}",
@@ -1159,6 +1164,7 @@
   "examplesFailedOnClose": "One or more of your examples do not match your definition. Check your examples before closing",
   "exampleSolution": "Example Solution {number}",
   "expand": "Expand",
+  "expandAll": "Expand all student rows",
   "explainCourseAssignmentsLearnMore": " Learn what happens when you assign a course.",
   "explainTtsAutoplay": "For Chrome, Internet Explorer, and Edge browsers only: When this setting is on, level instructions will be automatically read aloud to students using text-to-speech each time they open a level. This makes it easier for students who are not yet fluent readers to complete lessons.",
   "explainTtsAutoplayToolTip": "For Chrome, Internet Explorer, and Edge browsers only: When this setting is on, level instructions will be automatically read aloud to students using text-to-speech each time they open a level. This makes it easier for students who are not yet fluent readers to complete lessons. Not available in all courses.",
@@ -1234,9 +1240,6 @@
   "feedbackPlaceholderShort": "Write feedback for your student",
   "feedbackRubricEvaluation": "Evaluation Rubric:",
   "feedbackSaveError": "There's been an error saving your feedback. Please try to save again.",
-  "feedbackShareBannerTitle": "Share your feedback",
-  "feedbackShareBannerDesc": "Help us improve this feature by answering a few short questions.",
-  "feedbackShareBannerButton": "Share feedback",
   "feedbackSubmittedAt": "Feedback submitted at {timestamp}",
   "fewerNumberOfBlocks": "Fewer than {numBlocks, plural, one {1 block} other {# blocks}} used!",
   "fields": "Fields",
@@ -1365,6 +1368,7 @@
   "imageURLInputInvalid": "Please provide a valid URL.",
   "imageURLInputDescription": "Don't have a file downloaded? Provide the link to an image on the web. This works for URLs that end with *.GIF*, *.PNG*, or *.JPG*.",
   "imageURLInputPrompt": "Image URL:",
+  "imageURL": "Image URL: ",
   "import": "Import",
   "importCSV": "Import csv",
   "importingWithEllipsis": "Importing...",
@@ -1408,7 +1412,6 @@
   "invalidRecordTypeError": "You attempted to add a record to the table that included a list or object. The data table can only store booleans, numbers, strings, null, and undefined.",
   "joinASection": "Join a section",
   "joinedProfessionalLearningSectionsHomepageTitle": "Joined Professional Learning Sections",
-  "joinedProfessionalLearningSectionsHomepageDesc": "Your participant professional learning sections have moved! Find them on the My Professional Learning page.",
   "joinInstructions": "Joining Instructions",
   "joinSection": "Join section",
   "joinSectionExplanation": "Ask your students to join your section by going to this link and entering the section code (above): ",
@@ -1546,8 +1549,9 @@
   "lockFollowing": "Lock the following lessons that are currently unlocked:",
   "lockAssessment": "Lock assessment",
   "lockAssessmentLong": "Lock assessment when students finish using the \"Lock Settings\" button.",
-  "lockoutManageLinkedAccountsPrompt": "Our records indicate that your account requires parental permission to use a personal login and password. Please supply your parent's details below.",
-  "lockoutManageLinkedAccountsHeader": "Edit Personal Login Parent Permission",
+  "lockoutManageLinkedAccountsPrompt": "Our records indicate that your account requires parent or guardian permission to use a personal login and password. Please supply your parent or guardian's details below.",
+  "lockoutManageLinkedAccountsGrantedPrompt": "Our records indicate that your account requires parent or guardian permission to use a personal login and password.",
+  "lockoutManageLinkedAccountsHeader": "Parent or Guardian Permission",
   "lockSettings": "Lock Settings",
   "lockStage": "Lock lesson",
   "lockStageInstructions": "Once time is up, \"Lock lesson\" to hide questions.",
@@ -1652,6 +1656,7 @@
   "ltiLinkAccountNewAccountCardHeaderLabel": "I am new to Code.org",
   "ltiLinkAccountNewAccountCardContent": "You'll need to finish creating an account on Code.org to connect with {providerName}",
   "ltiLinkAccountNewAccountCardActionLabel": "Finish creating my account",
+  "ltiLinkAccountContinueAccountCardContent": "Continue to Code.org without linking to another existing Code.org account.",
   "ltiLinkAccountWelcomeBannerHeaderLabel": "Welcome to Code.org!",
   "ltiLinkAccountWelcomeBannerContent": "Looks like this is your first time logging in from {providerName}, select one of the options below to continue.",
   "ltiSectionSyncButtonDisabledAltText": "Roster sync is disabled. To re-enable, go to your account settings.",
@@ -1715,6 +1720,8 @@
   "manageLinkedAccounts": "Manage Linked Accounts",
   "manageLinkedAccounts_actions": "Actions",
   "manageLinkedAccounts_noLoginTooltip": "To make sure you can still sign in to your account, please add a password or another linked account first.",
+  "manageLinkedAccounts_stateRequired": "Uh oh! Please provide your state before adding a linked account.",
+  "manageLinkedAccounts_parentalPermissionRequired": "Uh oh! You must obtain parental permission before creating a linked account.",
   "manageLinkedAccounts_clever": "Clever Account",
   "manageLinkedAccounts_connect": "Connect",
   "manageLinkedAccounts_disconnect": "Disconnect",
@@ -1792,10 +1799,6 @@
   "myLibraries": "My Libraries",
   "myProjects": "My Projects",
   "myProfessionalLearningCourses": "My Professional Learning Courses",
-  "myProfessionalLearningCoursesHomepageDesc": "You can now see the professional learning courses you've started or completed on the Professional Learning page.",
-  "myProfessionalLearningCoursesHomepageButton": "View my Professional Learning courses",
-  "myProfessionalLearningSectionsHomepageDesc": "Your instructor professional learning sections have moved! Find them on the My Professional Learning page.",
-  "myProfessionalLearningSectionsHomepageButton": "View my Professional Learning sections",
   "myWorkshops": "My Workshops",
   "name": "Name",
   "nameRequired": "Student name (required)",
@@ -1982,6 +1985,10 @@
   "playzoneProjectsDescription": "Revisit one of your existing projects.",
   "playzoneProjectsTitle": "Open a Project",
   "playzoneSecondaryHeader": "Ask your teacher what to do next",
+  "plLandingCurriculumLaunchBannerSubHeading": "Introducing new professional learning!",
+  "plLandingCurriculumLaunchBannerDescription": "Explore new self-paced online modules that will empower you to teach the newest additions to our curriculum.",
+  "plLandingCurriculumLaunchBannerButtonText": "Start here!",
+  "plLandingCurriculumLaunchBannerButtonAriaLabel": "Start exporing the new self-paced online modules",
   "plLandingDescription": "Thank you for completing a {course} workshop. Please complete this survey about your experience to help us improve future professional development workshops!",
   "plLandingSubheading": "Submit your feedback",
   "plLandingStartSurvey": "Start survey",
@@ -2372,6 +2379,7 @@
   "saveAndClose": "Save and close",
   "saveAndPublish": "Save & Publish",
   "saveAndShare": "Save and share",
+  "saveAndViewUrl": "Save and view URL",
   "savedToGallery": "Saved",
   "saving": "Saving...",
   "scanQRCode": "Scan this code with your phone camera:",
@@ -2880,6 +2888,7 @@
   "upgradeAccountToAssign": "Use a teacher account to assign a curriculum",
   "upgradeAccountToAssignButtonText": "Learn how to update account type",
   "upgradeAccountToAssignHelpText": "You need a teacher account to assign a curriculum. Please switch to a teacher account or update your account type.",
+  "uploadImage": "Upload Image",
   "useCursorType": "Use {type} cursor",
   "usingCursorType": "Using {type} cursor",
   "useAiFeatures": "Use AI features",
