levelbuilder content changes (-robo-commit)

--- a/dashboard/config/locales/scripts.en.yml
+++ b/dashboard/config/locales/scripts.en.yml
@@ -16933,7 +16933,7 @@ en:
 
             **New to teaching AI?**
 
-            Get started with our [self-paced Professional Learning](studio.code.org/courses/elementaryai-2024).
+            Get started with our [self-paced Professional Learning](https://studio.code.org/courses/elementaryai-2024).
           student_description: ''
         music-tutorial-2024:
           lessons:
