--- a/pegasus/sites.v3/hourofcode.com/i18n/en.yml
+++ b/pegasus/sites.v3/hourofcode.com/i18n/en.yml
@@ -2417,13 +2417,11 @@
     get_started:
       heading: "Getting started with physical computing"
       desc: "We have curriculum options that support two different devices — see available options below."
-      microbit: "BBC micro:bit"
-      circuit_playground: "Circuit Playground"
       button:
         see_curriculum:
           label: "See available curriculum"
-          aria_label: "See available ${device} curriculum"
-        learn_about: "Learn about ${device}"
+          aria_label: "See available %{device} curriculum"
+        learn_about: "Learn about %{device}"
     why:
       heading: "Why physical computing?"
       real_world:
