--- a/dashboard/config/locales/devise.en.yml
+++ b/dashboard/config/locales/devise.en.yml
@@ -11,8 +11,8 @@ en:
       inactive: "Your account was not activated yet."
       invalid: "Invalid email or password."
       invalid_token: "Invalid authentication token."
-      locked: "Your account is locked. You will receive an email with instructions about how to unlock your account in a few minutes."
-      last_attempt: "You have one more attempt before your account is locked."
+      locked: "Too many failed login attempts. Your account has been temporarily locked. You will receive an email with instructions to recover your account shortly."
+      last_attempt: "Warning! You have one more failed login attempt before your account is temporarily locked."
       not_found_in_database: "Invalid email or password."
       timeout: "Your session expired, please sign in again to continue."
       unauthenticated: "You need to sign in or sign up before continuing."
