--- a/pegasus/sites.v3/hourofcode.com/i18n/en.yml
+++ b/pegasus/sites.v3/hourofcode.com/i18n/en.yml
@@ -2416,13 +2416,11 @@
     get_started:
       heading: "Getting started with physical computing"
       desc: "We have curriculum options that support two different devices — see available options below."
-      microbit: "BBC micro:bit"
-      circuit_playground: "Circuit Playground"
       button:
         see_curriculum:
           label: "See available curriculum"
-          aria_label: "See available ${device} curriculum"
-        learn_about: "Learn about ${device}"
+          aria_label: "See available %{device} curriculum"
+        learn_about: "Learn about %{device}"
     why:
       heading: "Why physical computing?"
       real_world:
@@ -2437,13 +2435,6 @@
     curricula_microbit:
       heading: "Curriculum using the micro:bit"
       desc: "Code.org has partnered with the Micro:bit Educational Foundation to offer teachers several resources on using the BBC micro:bit device."
-      button:
-        explore_unit:
-          label: "Explore the unit"
-          aria_label: "Explore the micro:bit Maker Module unit for grade %{grade}"
-        teach:
-          label: "Prepare to teach"
-          aria_label: "Prepare to teach the micro:bit Maker Module unit for grade %{grade}"
       creating_apps:
         overline: "Grades 6-12"
         title: "Creating Apps with Devices"
@@ -2476,6 +2467,13 @@
         title: "micro:bit Maker Module"
         desc: "Learn events, variables, conditionals, and sounds while creating a step counter, pet, and thermometer with the micro:bit."
         duration: "9 hours"
+      button:
+        explore_unit:
+          label: "Explore the unit"
+          aria_label: "Explore the micro:bit Maker Module unit for grade %{grade}"
+        teach:
+          label: "Prepare to teach"
+          aria_label: "Prepare to teach the micro:bit Maker Module unit for grade %{grade}"
     curricula_circuit_playground:
       heading: "Curriculum using the Circuit Playground"
       creating_apps:
