--- a/dashboard/config/locales/scripts.en.yml
+++ b/dashboard/config/locales/scripts.en.yml
@@ -14909,7 +14909,10 @@ en:
           title: Coding with AI
           description_audience: ''
           description_short: This unit uses AI to simplify concepts, solve problems, generate code, and instill ethical AI practices for confident learners in a rapidly changing world.
-          description: This unit empowers students to become confident, ethical coders. Students learn how to leverage generative AI tools to help explain code, tackle problems, and even generate code. More than just coding, this unit emphasizes ethical considerations and responsible use of AI, preparing students for the ever-evolving tech landscape.
+          description: |-
+            This unit empowers students to become confident, ethical coders. Students learn how to leverage generative AI tools to help explain code, tackle problems, and even generate code. More than just coding, this unit emphasizes ethical considerations and responsible use of AI, preparing students for the ever-evolving tech landscape.
+
+            Take a look at the [Getting Started with Coding with AI](https://docs.google.com/document/d/1hLR7WS8KmFxrjoM2Tr28rgfa0IZQ8otksw8ujYkdW3Y/edit?usp=sharing) guide for information on implementation options, what you and your students will need for this module, and helpful information to learn more about chatbots and large language models.
           student_description: |-
             In this unit, you'll learn how to use AI like help you:
 
@@ -17007,7 +17010,9 @@ en:
           title: Game Design (2024)
           description_audience: ''
           description_short: ''
-          description: ''
+          description: |2-
+
+            The Game Design module provides an exciting introduction to creating and codng games using Sprite Lab, a block-based programming environment.  In the first lesson, students will learn the basics of creating and animating sprites and making them interactive. The second lesson introduces variables, teaching students how to use them for tracking and modifying game elements like scores. The third lesson dives into game mechanics, focusing on player movement, obstacles, and win/lose conditions. The fourth lesson is a Game Jam where students collaboratively design and code a game based on a randomly generated theme. The final lesson emphasizes user feedback and data-driven improvements, enabling students to refine their games and enhance the player experience.
           student_description: ''
         gettingstarted-k5:
           lessons:
