i18n and format feedback submission

--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -99,8 +99,9 @@
   "aiFeedbackFalseNeg": "Incorrectly scored too low",
   "aiFeedbackVague": "Not specific enough to be helpful",
   "aiFeedbackOtherDetails": "Please provide more details.",
-  "aiFeedbackSubmit": "Submit Feedback",
+  "aiFeedbackQuestion": "Was this helpful?",
   "aiFeedbackReceived": "Feedback received!",
+  "aiFeedbackSubmit": "Submit Feedback",
   "aiBot": "AI Bot",
   "aiCannotAssess": "This learning goal is too subjective for AI to evaluate.",
   "aiConfidence": "AI Confidence: {aiConfidence}",
