--- a/i18n/locales/source/hourofcode/en.yml
+++ b/i18n/locales/source/hourofcode/en.yml
@@ -11166,6 +11166,7 @@
   video_library_page_inspirational_video_title_14: "It's More Than A Game (1 min)"
   video_library_page_inspirational_video_title_15: "Create With Computer Science (1 min)"
   video_library_page_inspirational_video_title_16: "Young Women in Computer Science (2 min)"
+  video_library_page_inspirational_video_title_17: "Beyond Binary: Computer Science is for Everyone (3 min)"
   video_library_page_not_hacked_video_title_1: "How Not To Get Hacked: Introduction"
   video_library_page_not_hacked_video_title_2: "How Not To Get Hacked: Passwords"
   video_library_page_not_hacked_video_title_3: "How Not To Get Hacked: Authentication and Device Locks"
