Students in cpa lockout flow cannot change age or us state (#59437)
* Users in cpa lockout flow cannout change age or us state

* Update edit.js

* Use correct id for us state select account setting

* UI test for student not in CPA flow account setting

* Update dashboard/app/views/devise/registrations/edit.html.haml

Co-authored-by: Dayne <dayne@code.org>

* Add sso to steps in user creation

* Move js logic to haml

* Remove script data unnecessary

* Add test case for clever outside of Colorado

* Refactors and fixes logic determining lockout status of user.

* Refactors logic into registrations controller and hides locking outside of US.

* Fixes use of country_code value for account settings.

* Fixes use of @country_code in account settings.

* Ensures we only lock out students when they do not have a state and not teachers.

---------

Co-authored-by: Dayne <dayne@code.org>
Co-authored-by: wilkie <wilkie05@gmail.com>

--- a/dashboard/config/locales/en.yml
+++ b/dashboard/config/locales/en.yml
@@ -557,6 +557,7 @@ en:
     parent_email_hint: "(this can be used for password recovery)"
     enter_parent_email: "Enter your parent or guardian's email address (for password recovery)"
     update: "Update Account"
+    update_field_parent_permission_required: '(You must obtain parental permission before updating this field)'
     account_successfully_updated: "Account successfully updated."
     auth_option_saved: "You have successfully linked your %{provider} account with email %{email}."
     auth_option_saved_no_email: "You have successfully linked your %{provider} account."
