--- a/i18n/locales/source/dashboard/course_offerings.json
+++ b/i18n/locales/source/dashboard/course_offerings.json
@@ -324,6 +324,7 @@
   "gen-ai-foudations-pilot-v1": "[Pilot] Foundations of Generative AI",
   "gen-ai-foundations-draft": "gen-ai-foundations-draft",
   "gen-ai-humanities": "gen-ai-humanities",
+  "gen-ai-staging": "gen-ai-staging",
   "gen-ai-standalone": "gen-ai-standalone",
   "genai-temp": "genai-temp",
   "gettingstarted-k5": "gettingstarted-k5",
@@ -457,7 +458,7 @@
   "sconyers": "sconyers",
   "seesaw-adaptations": "seesaw-adaptations",
   "self-paced-foundations-cs": "self-paced-foundations-cs",
-  "self-paced-pl-ai-101": "self-paced-pl-ai-101",
+  "self-paced-pl-ai-101": "AI 101 Self Paced Professional Learning for Educators",
   "self-paced-pl-aiml": "Teaching AI and Machine Learning",
   "self-paced-pl-coding-with-ai": "self-paced-pl-coding-with-ai",
   "self-paced-pl-computer-vision": "self-paced-pl-computer-vision",
@@ -523,7 +524,7 @@
   "virtual-holding-place": "virtual-holding-place",
   "virtual-pl-csa-summer": "virtual-pl-csa-summer",
   "virtual-pl-csd-summer": "CSD Virtual PL Workshop Course",
-  "virtual-pl-csp-summer": "virtual-pl-csp-summer",
+  "virtual-pl-csp-summer": "CS Principles Virtual PL Workshop Course",
   "virtual-pl-csp-summer-day1": "virtual-pl-csp-summer-day1",
   "virustest": "virustest",
   "vpl-csa": "CSA Virtual Professional Learning 23-24",
