dashboard i18n updates - Mongolian

--- a/dashboard/config/locales/activity_sections.mn-MN.json
+++ b/dashboard/config/locales/activity_sections.mn-MN.json
@@ -1,3 +1,3 @@
 version https://git-lfs.github.com/spec/v1
-oid sha256:14c191ab1ef244a0cc6e36a5d13ea29d1f77b2c4716178d179228fc3b592a92c
-size 987602
+oid sha256:ee4e2661ccef5f8c4ddc2f530ce2b19249a7004d1b0161d8ee5173e960443e26
+size 1008006
