--- a/i18n/locales/source/dashboard/progressions.yml
+++ b/i18n/locales/source/dashboard/progressions.yml
@@ -98,10 +98,9 @@ en:
       Cake Defender: Cake Defender
       Cake Survey: Cake Survey
       Captioned Scene Example: Captioned Scene Example
-      'Career Spotlight: Design Technologist': 'Career Spotlight: Design Technologist'
+      'Career Explorations: The Sports Industry': 'Career Explorations: The Sports Industry'
+      'Career Spotlight: Creative Technologist': 'Career Spotlight: Creative Technologist'
       'Career Spotlight: Healthcare': 'Career Spotlight: Healthcare'
-      'Career Spotlight: Interactive Exhibit': 'Career Spotlight: Interactive Exhibit'
-      'Career Spotlight: The Sports Industry': 'Career Spotlight: The Sports Industry'
       Challenge: Challenge
       Challenge Levels: Challenge Levels
       Challenge/Practice: Challenge/Practice
