--- a/i18n/locales/source/dashboard/scripts.yml
+++ b/i18n/locales/source/dashboard/scripts.yml
@@ -15544,6 +15544,8 @@ en:
               name: Game Jam
             lesson-8:
               name: Next Steps
+            lesson-9:
+              name: Getting Started with Code.org (Optional)
           lesson_groups: {}
           name: k5gamedesignsandbox-2024
           title: K5 Game Design Sandbox
