AI Component Library: chat message component (#59564)
* Common chat components WIP

* use DSCO alert

* remove unnecessary type

* delete unused files + cleanup

--- a/apps/i18n/common/en_us.json
+++ b/apps/i18n/common/en_us.json
@@ -136,6 +136,10 @@
   "aiWarningModalMessagesAreRecorded": "All messages you send are recorded.",
   "aiWarningModalPersonalNotSubmitted": "In order to protect your privacy, anything considered personal information (name, phone number, address, etc.) should not be submitted.",
   "aiWarningModalOk": "Start chatting",
+  "aiChatBotIconAlt": "An icon depicting a robot",
+  "aiChatInappropriateUserMessage": "This message has been flagged as inappropriate.",
+  "aiChatTooPersonalUserMessage": "This message has been flagged as too personal.",
+  "aiChatResponseError": "There was an error getting a response. Please try again.",
   "all": "All",
   "allHandouts": "All Handouts",
   "allowEditing": "Allow editing",
